--- a/openacademy/views/courses.xml
+++ b/openacademy/views/courses.xml
@@ -28,7 +28,15 @@
                       <field name="description"/>
                   </page>
                   <page string="Sessions" name="sessions" >
-                      <field name="session_ids" />
+                      <field name="session_ids">
+                        <tree>
+                            <field name="name"/>
+                            <field name="instructor_id" />
+                            <field name="start_date" />
+                            <field name="duration" />
+                            <field name="seats" />
+                        </tree>
+                      </field>
                   </page>
               </notebook>
           </sheet>
