--- a/openacademy/views/courses.xml
+++ b/openacademy/views/courses.xml
@@ -54,6 +54,12 @@
             <field name="name"/>
             <field name="responsible_id" />
             <field name="description"/>
+            <filter name="my_courses" string="My Courses"
+                    domain="[('responsible_id', '=', uid)]"/>
+            <group string="Group By">
+                <filter name="by_responsible" string="Responsible"
+                        context="{'group_by': 'responsible_id'}"/>
+            </group>
          </search>
       </field>
     </record>
@@ -64,6 +70,7 @@
       <field name="name">openacademy course</field>
       <field name="res_model">openacademy.course</field>
       <field name="view_mode">tree,form</field>
+      <field name="context" eval="{'search_default_my_courses': 1}"/>
       <field name="help" type="html">
           <p class="oe_view_nocontent_create">Create your first course</p>
       </field>
