--- a/openacademy/views/courses.xml
+++ b/openacademy/views/courses.xml
@@ -68,14 +68,9 @@
     <record model="ir.actions.act_window" id="openacademy.action_course">
       <field name="name">openacademy course</field>
       <field name="res_model">openacademy.course</field>
-      <field name="view_mode">tree,form</field>
-      <field name="context" eval="{'search_default_my_courses': 1}"/>
-      <field name="help" type="html">
-          <p class="oe_view_nocontent_create">Create your first course</p>
-      </field>
+      <field name="view_mode">kanban,tree,form</field>
+      <field name="context">{'search_default_my_courses': 1, 'default_responsible_id' : uid}</field>
     </record>
-
-
 
     <!-- Top menu item -->
     <menuitem name="openacademy" id="openacademy.menu_root"/>
