--- a/openacademy/wizard/add_attendee_view.xml
+++ b/openacademy/wizard/add_attendee_view.xml
@@ -9,6 +9,12 @@
                         <field name="session_id" readonly="1"/>
                         <field name="attendee_ids"/>
                     </group>
+                    <footer>
+                        <button name="subscribe" type="object"
+                                string="Subscribe" class="oe_highlight"/>
+                        or
+                        <button special="cancel" string="Cancel"/>
+                    </footer>
                 </form>
             </field>
         </record>
