[EX35Bis] modifying an existing record in xml

--- a/openacademy/report/session.xml
+++ b/openacademy/report/session.xml
@@ -27,5 +27,9 @@
                 </t>
             </t>
         </template>
+
+        <record id="openacademy.report_session" model="ir.actions.report.xml">
+            <field name="report_type">qweb-html</field>
+        </record>
     </data>
 </openerp>
